# realcugan-android-sdk

./: .jitpack.yml  LICENSE  README.md  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/aoihoshino/realcugan_ncnn_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/realcugan/: webp_image.h
app/src/main/java/io/github/aoihoshino/realcugan_ncnn_android/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/aoihoshino/realcugan_ncnn_android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
realcugan-android-sdk/: build.gradle.kts
realcugan-android-sdk/src/androidTest/java/io/github/aoihoshino/realcugan_ncnn_android/: ExampleInstrumentedTest.kt
realcugan-android-sdk/src/main/: AndroidManifest.xml
realcugan-android-sdk/src/main/cpp/: CMakeLists.txt  realcugan.cpp  realcugan_ncnn_android.cpp
realcugan-android-sdk/src/main/java/io/github/aoihoshino/realcugan_ncnn_android/: RealCUGAN.kt  RealCUGANOption.kt  RealCUGANService.kt
realcugan-android-sdk/src/main/res/values/: strings.xml
realcugan-android-sdk/src/main/res/values-en/: strings.xml
realcugan-android-sdk/src/test/java/io/github/aoihoshino/realcugan_ncnn_android/: RealCUGANTest.kt
